--- a/sobre.html
+++ b/sobre.html
@@ -1,33 +1,39 @@
-
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="/styles/style.css" rel="stylesheet">
-    <link href="/styles/fonts.css" rel="stylesheet">
-    <link href="/styles/media.css" rel="stylesheet">
-    <title>Sobre - Reesus Odonto</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Sobre - Reesus Odonto</title>
+  <link rel="stylesheet" href="/styles/style.css" />
+  <link rel="stylesheet" href="/styles/fonts.css" />
+  <link rel="stylesheet" href="/styles/media.css" />
 </head>
 <body>
-    <header>
-        <div id="title">
-            <h1>Reesus</h1>
-            <h1>Odonto</h1>
-        </div>
-        <ul>
-            <a href="index.html"><li>Início</li></a>
-            <a href="servicos.html"><li>Serviços</li></a>
-            <a href="sobre.html"><li>Sobre</li></a>
-            <a href="contato.html"><li>Contato</li></a>
-            <a href="login.html" id="inscreva-se-btn"><li>Já é paciente?</li></a>
-        </ul>
-    </header>
-    <main>
-        <aside>
-            <h2>Sobre a <span>Clínica</span></h2>
-            <p>Nossa clínica odontológica é especializada em proporcionar sorrisos saudáveis e bonitos. Com uma equipe altamente qualificada e tecnologia de ponta, oferecemos tratamentos personalizados para cada paciente.</p>
-        </aside>
-    </main>
+  <header>
+    <div id="title">
+      <h1>Reesus</h1>
+      <h1>Odonto</h1>
+    </div>
+    <nav>
+      <ul>
+        <li><a href="index.html">Início</a></li>
+        <li><a href="servicos.html">Serviços</a></li>
+        <li><a href="sobre.html">Sobre</a></li>
+        <li><a href="contato.html">Contato</a></li>
+        <li><a href="login.html" id="inscreva-se-btn">Já é paciente?</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <main>
+    <section>
+      <h2>Sobre a <span>Clínica</span></h2>
+      <p>
+        Nossa clínica odontológica é especializada em proporcionar sorrisos saudáveis e bonitos. 
+        Com uma equipe altamente qualificada e tecnologia de ponta, oferecemos tratamentos 
+        personalizados para cada paciente.
+      </p>
+    </section>
+  </main>
 </body>
 </html>
